--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="assets/styles/styles.css" rel="stylesheet" />
   <script defer src="./dom.js"></script>
   <script defer src="./app.js"></script>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./assets/styles/styles.css">
   <title>Nhox Bags</title>
 </head>
 
