--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body class="container-fluid">
     <header id="header"></header>
 
-    <main id="main" class="py-3"></main>
+    <main id="main"></main>
 
     <footer id="footer" class="row"></footer>
 
