offcanvas fixed - meta tags - shortcut icon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="./assets/fonts/CENSCBK.TTF" rel="stylesheet" type="text/css"/>
+  <meta name="keywords"
+    content="NHOX, BAGS, TIENDA, ONLINE, MOCHILAS, MOCHILA, BOLSOS, BOLSO, CARTERAS, CARTERA, MAR DEL PLATA, BUENOS AIRES, ARGENTINA, SHOP, VENTA, CELESTE, LARLUX, MODA, DISEÑO, FEMEMENINO, FEMENINAS, MUJER, MUJERES, COOL LADY, BABE ROSE, CLEO, TENDER BLACK, COBRA RED, COBRA GREEN, WHEEL BLACK, USE ME">
+  <meta name="description"
+    content="NHOX Bags - Tienda online de bolsos y mochilas de diseño. Sumérgete en la experiencia NHOX y dale a tu rutina un cambio de aire a través de nuestros productos hechos con pasión por el diseño y la moda!">
+  <meta name="ROBOTS" content="ALL">
+  <meta name="language" content="Spanish">
+  <meta name="author" content="Rodrigo Andrés Manica - Gerardo Damián Rodriguez">
+  <meta name="distribution" content="Global">
+  <meta name="country" content="Argentina">
+  <meta name="city" content="Mar del Plata">
+
+
+  <link href="./assets/fonts/CENSCBK.TTF" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css2?family=Chathura&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,15 +26,14 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
   <link href="assets/styles/styles.css" rel="stylesheet" />
 
   <script defer src="./dom.js"></script>
   <script defer src="./app.js"></script>
 
   <link rel="stylesheet" href="./assets/styles/styles.css" />
-  <title>Nhox Bags</title>
+  <title>Nhox Bags | Shop </title>
+  <link rel="shortcut icon" href="./assets/img/logo_nhox_marron.png">
 </head>
 
 <body class="container-fluid">
@@ -33,21 +44,13 @@
   <footer id="footer" class="row"></footer>
 
   <button id="toTop"><i class="bi bi-arrow-up"></i></button>
-  
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
   </script>
-
-  <!-- -- AOS -- -->
-
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-<script>
-AOS.init();
-</script>
 
 </body>
 
